<?xml version="1.0" encoding="utf-8"?>    
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	     xmlns:tools="http://schemas.android.com/tools"
	     android:id="@+id/contactpanel"
	     android:layout_width="fill_parent"
	     android:layout_height="match_parent"
	     android:background="#000000"
	     android:padding="2dp" >

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
             <ImageView
		        android:id="@+id/imageView1"
		         android:layout_width="match_parent"
		         android:layout_height="234dp"
		         android:contentDescription="@string/contentDesc"
		         android:src="@drawable/ic_contact_background" />
		 
		     <!--PROGRAMMING CONTACT INFO -->

		     <TextView
		         android:layout_width="wrap_content"
		         android:layout_height="wrap_content"
		         android:layout_marginTop="10dp"
		         android:autoLink="email"
		         android:text="@string/contact_programmingEmail"
		         android:textColor="#22d1ca"
		         android:textColorLink="#7dede9" />

		     <TextView
		         android:layout_width="wrap_content"
		         android:layout_height="wrap_content"
		         android:text="@string/contact_programmingPhone" 
		         android:autoLink="phone"
		         android:textColorLink="#7dede9" />
		     
		     <!--MUSIC SUBMISSION CONTACT INFO -->

		     <TextView
		         android:layout_width="wrap_content"
		         android:layout_height="wrap_content"
		         android:layout_marginTop="10dp"
		         android:autoLink="email"
		         android:text="@string/contact_submissionEmail"
		         android:textColor="#22d1ca"
		         android:textColorLink="#7dede9" />

		     <TextView
		         android:layout_width="wrap_content"
		         android:layout_height="wrap_content"
		         android:text="@string/contact_submissionPhone" 
		         android:autoLink="phone"
		         android:textColorLink="#7dede9" />
		     
		     
		     <!--MISHA CONTACT INFO -->

		     <TextView
		         android:layout_width="wrap_content"
		         android:layout_height="wrap_content"
		         android:layout_marginTop="10dp"
		         android:autoLink="email"
		         android:text="@string/contact_mishaEmail"
		         android:textColor="#22d1ca"
		         android:textColorLink="#7dede9" />
  
		     <TextView
		         android:layout_width="wrap_content"
		         android:layout_height="wrap_content"
		         android:text="@string/contact_mishaPhone" 
		         android:autoLink="phone"
		         android:textColorLink="#7dede9" />
         </LinearLayout>
     </ScrollView>