<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	     xmlns:tools="http://schemas.android.com/tools"
	     android:layout_width="wrap_content"
	     android:layout_height="match_parent"
	     android:background="#000000" >   
		<RelativeLayout
		    android:id="@+id/donatepanel"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:background="#000000"
		    android:orientation="vertical"
		    android:padding="2dp" >
			<ImageView
				        android:id="@+id/donate_logo"
				         android:layout_width="match_parent"
				         android:layout_height="234dp"
				         android:contentDescription="@string/contentDesc"
				         android:src="@drawable/musiclover" />
		    <TextView
		        android:id="@+id/donatetext2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentRight="true"
		        android:layout_below="@+id/donate_button"
		        android:layout_marginTop="20dp"
		        android:gravity="center"
		        android:text="@string/donate_text2"
		        android:textColor="#7dede9" />
		
		    <ImageButton
		        android:id="@+id/donate_button"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/donatetext1"
		        android:layout_centerHorizontal="true"
		        android:layout_marginTop="14dp"
		        android:src="@drawable/btn_donate"
		        android:contentDescription="@string/contentDesc" />
		
		    <TextView
		        android:id="@+id/donatetext1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignLeft="@+id/donate_logo"
		        android:layout_below="@+id/donate_logo"
		        android:layout_marginTop="14dp"
		        android:gravity="center"
		        android:text="@string/donate_text1"
		        android:textColor="#7dede9" />
			
		</RelativeLayout>
</ScrollView>